--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,21 @@
-# Compiled class file
-*.class
-
-# Log file
+logs
+target
+.settings
+.classpath
+.DS_Store
+.iml
+.gitignore
+.project
+Server
+.metadata/
+dependency-reduced-pom.xml
+test-output
+bin/
+*.iml
+*.iws
+overlays
+.idea/*
+classes
+*.versionsBackup
+temp/*
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
