--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
   <name>chat-orchestrator</name>
 
   <properties>
-    <java.version>21</java.version>
-    <spring.boot.version>3.3.4</spring.boot.version>
+    <java.version>24</java.version>
+    <spring.boot.version>3.5.0</spring.boot.version>
+    <lombok.version>1.18.38</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -84,7 +85,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
+      <version>${lombok.version}</version>
     </dependency>
 
     <!-- Tests -->
@@ -139,10 +140,17 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <!--          <source>24</source>-->
-          <!--          <target>24</target>-->
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <source>24</source>
+          <target>24</target>
           <!-- Use release instead of source/target -->
-          <release>${java.version}</release>
+          <!--          <release>${java.version}</release>-->
         </configuration>
       </plugin>
     </plugins>
