update router agent

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,14 +4,19 @@
 server.port=0
 
 ## --------------------------------------
-## H2 In-Memory DB (test only)
+## Local Postgres for tests
 ## --------------------------------------
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: let Hibernate manage schema for tests
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=false
+
+# Only needed if you ever use @DataJpaTest and don?t want it to swap to embedded DB
+spring.test.database.replace=NONE
 
 ## --------------------------------------
 ## Mongo Test (use Fongo or Testcontainers)
