--- a/pom.xml
+++ b/pom.xml
@@ -100,25 +100,17 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
 
-    <!-- WireMock for integration tests -->
-    <dependency>
-      <groupId>org.wiremock</groupId>
-      <artifactId>wiremock-standalone</artifactId>
-      <version>3.9.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Spring Cloud Contract WireMock support -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-contract-wiremock</artifactId>
-      <version>4.1.4</version> <!-- compatible with Spring Cloud 2023.0.x / Boot 3.3.x -->
+      <version>4.1.4</version>
       <scope>test</scope>
     </dependency>
 
@@ -127,7 +119,6 @@
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -151,6 +142,18 @@
           <target>24</target>
           <!-- Use release instead of source/target -->
           <!--          <release>${java.version}</release>-->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <environmentVariables>
+            <!-- Dummy key just to satisfy ADK/Gemini client -->
+            <GOOGLE_API_KEY>dummy-test-key</GOOGLE_API_KEY>
+            <!-- or use GEMINI_API_KEY instead if you prefer -->
+          </environmentVariables>
         </configuration>
       </plugin>
     </plugins>
