--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,14 @@ spring.redis.port=6379
 ## --------------------------------------
 ## Payment service config
 ## --------------------------------------
-payment.service.base-url=http://localhost:8081
+payment.service.base-url=http://payment-service-next.qa2-sg.cld
+
+# Optional overrides; defaults exist in @Value above
+payment.service.store-id=10001
+payment.service.channel-id=web
+payment.service.client-id=web
+payment.service.username=chatorchestrator
+payment.service.request-id=chatorchestrator
 
 ## --------------------------------------
 ## Logging
