--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -34,6 +34,11 @@ spring.redis.port=6390
 ## AutoConfigureWireMock provides: wiremock.server.port
 ## --------------------------------------
 payment.service.base-url=http://localhost:${wiremock.server.port}
+payment.service.store-id=10001
+payment.service.channel-id=web
+payment.service.client-id=web
+payment.service.username=test-user
+payment.service.request-id=test-request
 
 ## --------------------------------------
 ## Logging
